--- a/css/chat.css
+++ b/css/chat.css
@@ -77,6 +77,9 @@
   background-color: #007bff;
   padding: 1rem 1.5rem;
   border-bottom: 1px solid #000000;
+  color: #ffffff;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
 }
 
 /*imagenes de los clientes*/
@@ -111,6 +114,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: -500px;
 }
 
 #imagePreview p {
@@ -136,7 +140,7 @@
 /* Estilo para la fecha y hora -- Agregado*/
 .message .message-time {
 font-size: 0.75rem;
-color: #ffffff;
+color: #c9c6c6;
 position: absolute;
 padding-bottom: -0px;
 bottom: 2px;
@@ -152,7 +156,9 @@ color: #000000;
 .mt-3{
 background-color: #ffffff;
 border-radius: 3rem;
-padding: 6px;
+padding-left: 10px;
+position: relative;
+top: -20px;
 }
 
 /*-------------------------------*/
@@ -164,10 +170,32 @@ color: #000000;
 border-radius: 0.5rem;
 margin-left: 0px;
 padding-top: 10px;
-padding-bottom: 50px;
+padding-bottom: 20px;
 }
 
 .container-fluid{
 /* pagina general*/
+
+}
+
+.customer-email {
+word-break: break-word; /* Permite que las palabras largas se dividan */
+white-space: normal;   /* Asegura que el texto haga saltos de línea */
+display: block;        /* Hace que siempre se comporte como un bloque */
+}
+
+.chat-list {
+max-height: 740px; /* Ajustar */
+overflow-y: auto;
+border: 1px solid #ccc;
+border-radius: 0.5rem;
+}
+
+.date-header {
+text-align: center;
+font-weight: bold;
+margin: 10px 0;
+color: #555;
+font-size: 14px;
 }
 
